Mon Oct 06 20:33:40 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBListWindow.cpp:
	* src/QGaimBListWindow.h:
	  - The IM item in the context-sensitive menu for buddies and contacts
	    now works.

Mon Oct 06 19:09:23 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimNotify.cpp:
	* src/QGaimNotify.h:
	  - Added the UI for the notify formatted dialog.

Mon Oct 06 16:22:28 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBuddyList.cpp:
	* src/QGaimBuddyList.h:
	  - Added support for Get User Info. There's just no UI for displaying
	    it, yet :)

Mon Oct 06 01:48:03 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimAccountsWindow.cpp:
	* src/QGaimAccountsWindow.h:
	  - Added a throbber for each protocol icon in the accounts window.
	    When an account is signing on, the protocol icon will grey in,
	    grey out.. throbby action!

Mon Oct 06 00:41:47 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvButton.cpp:
	  - The icons in the conversations drop-down menu now show buddy
	    status.

Mon Oct 06 00:38:42 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBuddyList.cpp:
	  - Fixed scaling of emblems in the buddy list.

Mon Oct 06 00:18:40 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBuddyList.cpp:
	* src/QGaimBuddyList.h:
	  - Fixed the scaling on conversation tabs.

Mon Oct 06 00:12:13 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvButton.cpp:
	* src/QGaimConvWindow.cpp:
	  - Fixed the scaling on the conversations button and the tabs.

Mon Oct 06 00:04:34 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimAccountEditor.cpp:
	* src/QGaimAccountsWidnow.cpp:
	* src/QGaimBuddyList.cpp:
	* src/QGaimImageUtils.h:
	* src/QGaimProtocolBox.cpp:
	* src/QGaimProtocolUtils.cpp:
	* src/QGaimProtocolUtils.h:
	* gaim.pro:
	  - The protocol icons and status icons are now their normal,