@@ -1,3 +1,10 @@
+Mon Oct 06 20:44:46 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
+
+	* src/QGaimBuddyList.cpp:
+	* src/QGaimBuddyList.h:
+	  - Added a convenience function to QGaimBuddyList that returns the
+	    selected buddy, taking into account contacts.
+
 Mon Oct 06 20:33:40 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
 
 	* src/QGaimBListWindow.cpp:
